[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/scenes/1/Door_Light.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/1/Background.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/3/kitchen-furn.png" type="Texture" id=3]
[ext_resource path="res://assets/scenes/1/DustOverlay.png" type="Texture" id=4]
[ext_resource path="res://assets/scenes/1/Floor.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Transition_Scene.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Kitchen.gd" type="Script" id=7]
[ext_resource path="res://assets/scenes/3/table.png" type="Texture" id=8]
[ext_resource path="res://assets/scenes/1/Door.png" type="Texture" id=9]
[ext_resource path="res://assets/items/redkey1.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=12]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 2547.99, 970.406, 2547.99, 1084.28, -6.08282, 1083.14, -3.9639, 979.309 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( -3.9639, 979.309, -6.08282, 1083.14, 2547.99, 1084.28, 2547.99, 970.406 ) ]

[node name="Kitchen" type="Node"]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
margin_left = 4.04431
margin_right = 2550.04
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 954.44, 546.933 )
mouse_filter = 2
mouse_default_cursor_shape = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area_Move" type="Control" parent="Control"]
anchor_top = 0.887
anchor_right = 0.999
anchor_bottom = 1.001
margin_top = 0.039978
margin_right = -554.454
margin_bottom = 82.9199
rect_scale = Vector2( 1.28, 0.6 )
mouse_default_cursor_shape = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Environment" type="Node" parent="Control"]

[node name="Background" type="Sprite" parent="Control/Environment"]
position = Vector2( 0.755188, 0 )
scale = Vector2( 1.32775, 1 )
z_index = -1
texture = ExtResource( 2 )
centered = false

[node name="Floor" type="Sprite" parent="Control/Environment"]
position = Vector2( 3.75195, 0 )
scale = Vector2( 1.32619, 1.00196 )
z_index = -1
texture = ExtResource( 5 )
centered = false

[node name="Door_Light" type="Sprite" parent="Control/Environment"]
position = Vector2( 42.0217, 0 )
scale = Vector2( 1.30626, 1 )
z_index = -1
texture = ExtResource( 1 )
centered = false
flip_h = true

[node name="Door_Light3" type="Sprite" parent="Control/Environment"]
position = Vector2( 1693, 539.664 )
rotation = -1.5708
scale = Vector2( 0.56559, 0.848343 )
texture = ExtResource( 1 )

[node name="Door_Light2" type="Sprite" parent="Control/Environment"]
visible = false
position = Vector2( 963.045, 542.031 )
texture = ExtResource( 1 )

[node name="table" type="Sprite" parent="Control/Environment"]
position = Vector2( 492.479, 501.477 )
texture = ExtResource( 8 )

[node name="kitchen-furn" type="Sprite" parent="Control/Environment"]
position = Vector2( 1467.08, 593.822 )
texture = ExtResource( 3 )

[node name="Door" type="Sprite" parent="Control/Environment"]
position = Vector2( 958.914, 552.996 )
texture = ExtResource( 9 )

[node name="Botoes" type="Node" parent="Control"]

[node name="Safe" type="TextureButton" parent="Control/Botoes"]
margin_left = 327.043
margin_top = 702.894
margin_right = 976.043
margin_bottom = 1022.89
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="TextureButton" parent="Control/Botoes"]
margin_left = 2310.04
margin_top = 424.0
margin_right = 2552.04
margin_bottom = 981.0
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door2" type="TextureButton" parent="Control/Botoes"]
margin_left = 5.0
margin_top = 402.0
margin_right = 280.0
margin_bottom = 1016.0
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door3" type="TextureButton" parent="Control/Botoes"]
margin_left = 1544.61
margin_top = 909.326
margin_right = 2109.61
margin_bottom = 1091.33
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedKey" type="TextureButton" parent="Control/Botoes"]
anchor_right = 0.032
anchor_bottom = 0.057
margin_left = 150.0
margin_top = 965.0
margin_right = 178.56
margin_bottom = 993.44
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation2D" type="Navigation2D" parent="Control"]
position = Vector2( 1.69409, -4.51978 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Control/Navigation2D"]
position = Vector2( 2.51977, 0 )
z_index = -1
navpoly = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="Control"]
position = Vector2( 1319.2, 1013.98 )
z_index = 10
points = PoolVector2Array( 90.8013, -618.261 )

[node name="DustOverlay" type="Sprite" parent="."]
position = Vector2( 1274.51, 541.945 )
scale = Vector2( 1.32703, 1 )
z_index = 4
texture = ExtResource( 4 )

[node name="Transition_Scene" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="Control/Botoes/Safe" to="." method="_on_Safe_pressed"]
[connection signal="pressed" from="Control/Botoes/Door" to="." method="_on_Door_pressed"]
[connection signal="pressed" from="Control/Botoes/Door2" to="." method="_on_Door2_pressed"]
[connection signal="pressed" from="Control/Botoes/Door3" to="." method="_on_Door3_pressed"]
[connection signal="pressed" from="Control/Botoes/RedKey" to="." method="_on_RedKey_pressed"]
[connection signal="transitioned" from="Transition_Scene" to="." method="_on_Transition_Scene_transitioned"]
